# XTS

./: .gitignore  CHANGES  Licence  Makefile  Makefile.am  README  README.FIRST  RELEASE  autogen.sh  check.sh.in  configure  configure.ac
xts5/: .cvsignore  .gitignore  Makefile  Makefile.am  common.mk  makefile.old  tet_scen  tetbuild.cfg  tetclean.cfg  tetexec.cfg  tetexec.cfg.in
xts5/SHAPE/: .gitignore  Makefile.am  XShapeCombineMask.m  XShapeCombineRectangles.m  XShapeCombineRegion.m  XShapeCombineShape.m  XShapeGetRectangles.m  XShapeInputSelected.m  XShapeOffsetShape.m  XShapeQueryExtension.m  XShapeQueryExtents.m  XShapeQueryVersion.m  XShapeSelectInput.m
xts5/XI/: .gitignore  AllowDeviceEvents.m  ChangeDeviceControl.m  ChangeDeviceKeyMapping.m  ChangeFeedbackControl.m  ChangeKeyboardDevice.m  ChangePointerDevice.m  CloseDevice.m  DeviceBell.m  GetDeviceMotionEvents.m  GetFeedbackControl.m  GrabDevice.m  GrabDeviceButton.m  GrabDeviceKey.m  Makefile.am  OpenDevice.m  SendExtensionEvent.m  SetDeviceButtonMapping.m  SetDeviceMode.m  SetDeviceModifierMapping.m  SetDeviceValuators.m  UngrabDeviceButton.m  UngrabDeviceKey.m  XChangeDeviceDontPropagateList.m  XGetDeviceControl.m  XGetDeviceDontPropagateList.m  XGetDeviceFocus.m  XGetDeviceKeyMapping.m  XGetDeviceModifierMapping.m  XGetSelectedExtensionEvents.m  XQueryDeviceState.m  XSelectExtensionEvent.m  XSetDeviceFocus.m  XUngrabDevice.m
xts5/XIproto/: .gitignore  AllowDeviceEvents.m  ChangeDeviceControl.m  ChangeDeviceDontPropagateList.m  ChangeDeviceKeyMapping.m  ChangeFeedbackControl.m  ChangeKeyboardDevice.m  ChangePointerDevice.m  CloseDevice.m  DeviceBell.m  GetDeviceButtonMapping.m  GetDeviceControl.m  GetDeviceDontPropagateList.m  GetDeviceFocus.m  GetDeviceKeyMapping.m  GetDeviceModifierMapping.m  GetDeviceMotionEvents.m  GetExtensionVersion.m  GetFeedbackControl.m  GetSelectedExtensionEvents.m  GrabDevice.m  GrabDeviceButton.m  GrabDeviceKey.m  ListInputDevices.m  Makefile.am  Miscellaneous.m  OpenDevice.m  QueryDeviceState.m  SelectExtensionEvent.m  SendExtensionEvent.m  SetDeviceButtonMapping.m  SetDeviceFocus.m  SetDeviceMode.m  SetDeviceModifierMapping.m  SetDeviceValuators.m  UngrabDevice.m  UngrabDeviceButton.m  UngrabDeviceKey.m
xts5/Xlib10/: .gitignore  Makefile.am  XActivateScreenSaver.m  XAddHost.m  XAddHosts.m  XAddToSaveSet.m  XChangeSaveSet.m  XDisableAccessControl.m  XEnableAccessControl.m  XForceScreenSaver.m  XGetScreenSaver.m  XGrabServer.m  XInstallColormap.m  XKillClient.m  XListHosts.m  XListInstalledColormaps.m  XRemoveFromSaveSet.m  XRemoveHost.m  XRemoveHosts.m  XReparentWindow.m  XResetScreenSaver.m  XSetAccessControl.m  XSetScreenSaver.m  XUngrabServer.m  XUninstallColormap.m
xts5/Xlib11/: .gitignore  ButtonPress.m  ButtonRelease.m  CirculateNotify.m  CirculateRequest.m  ClientMessage.m  ColormapNotify.m  ConfigureNotify.m  ConfigureRequest.m  CreateNotify.m  DestroyNotify.m  EnterNotify.m  Expose.m  FocusIn.m  FocusOut.m  GraphicsExpose.m  GravityNotify.m  KeyPress.m  KeyRelease.m  KeymapNotify.m  LeaveNotify.m  Makefile.am  MapNotify.m  MapRequest.m  MappingNotify.m  MotionNotify.m  NoExpose.m  PropertyNotify.m  ReparentNotify.m  ResizeRequest.m  SelectionClear.m  SelectionNotify.m  SelectionRequest.m  UnmapNotify.m  VisibilityNotify.m
xts5/Xlib12/: .gitignore  Makefile.am  XCheckIfEvent.m  XCheckMaskEvent.m  XCheckTypedEvent.m  XCheckTypedWindowEvent.m  XCheckWindowEvent.m  XDisplayMotionBufferSize.m  XEventsQueued.m  XFlush.m  XGetErrorDatabaseText.m  XGetErrorText.m  XGetMotionEvents.m  XIfEvent.m  XMaskEvent.m  XNextEvent.m  XPeekEvent.m  XPeekIfEvent.m  XPending.m  XPutBackEvent.m  XSelectInput.m  XSendEvent.m  XSetAfterFunction.m  XSetErrorHandler.m  XSetIOErrorHandler.m  XSync.m  XSynchronize.m  XWindowEvent.m
xts5/Xlib13/: .gitignore  Makefile.am  XAllowEvents.m  XAutoRepeatOff.m  XAutoRepeatOn.m  XBell.m  XChangeActivePointerGrab.m  XChangeKeyboardControl.m  XChangeKeyboardMapping.m  XChangePointerControl.m  XDeleteModifiermapEntry.m  XDisplayKeycodes.m  XFreeModifiermap.m  XGetInputFocus.m  XGetKeyboardControl.m  XGetKeyboardMapping.m  XGetModifierMapping.m  XGetPointerControl.m  XGetPointerMapping.m  XGrabButton.m  XGrabKey.m  XGrabKeyboard.m  XGrabPointer.m  XInsertModifiermapEntry.m  XNewModifiermap.m  XQueryKeymap.m  XSetInputFocus.m  XSetModifierMapping.m  XSetPointerMapping.m  XUngrabButton.m  XUngrabKey.m  XUngrabKeyboard.m  XUngrabPointer.m  XWarpPointer.m
xts5/Xlib14/: .gitignore  Makefile.am  XBaseFontNameListOfFontSet.m  XCloseIM.m  XContextDependentDrawing.m  XCreateFontSet.m  XCreateIC.m  XDestroyIC.m  XDisplayOfIM.m  XExtentsOfFontSet.m  XFilterEvent.m  XFontsOfFontSet.m  XFreeFontSet.m  XGetICValues.m  XGetIMValues.m  XIMOfIC.m  XLocaleOfFontSet.m  XLocaleOfIM.m  XOpenIM.m  XSetICFocus.m  XSetICValues.m  XSetLocaleModifiers.m  XSupportsLocale.m  XUnsetICFocus.m  XVaCreateNestedList.m  XmbLookupString.m  XmbResetIC.m  XmbSetWMProperties.m  XmbTextEscapement.m  XmbTextExtents.m  XmbTextListToTextProperty.m  XmbTextPerCharExtents.m  XmbTextPropertyToTextList.m  XwcFreeStringList.m  XwcLookupString.m  XwcResetIC.m  XwcTextEscapement.m  XwcTextExtents.m  XwcTextListToTextProperty.m  XwcTextPerCharExtents.m  (+1 more)
xts5/Xlib15/: .gitignore  Makefile.am  XAllocClassHint.m  XAllocIconSize.m  XAllocSizeHints.m  XAllocStandardColormap.m  XAllocWMHints.m  XDefaultString.m  XFetchName.m  XFreeStringList.m  XGetClassHint.m  XGetCommand.m  XGetIconName.m  XGetIconSizes.m  XGetRGBColormaps.m  XGetTextProperty.m  XGetTransientForHint.m  XGetWMClientMachine.m  XGetWMColormapWindows.m  XGetWMHints.m  XGetWMIconName.m  XGetWMName.m  XGetWMNormalHints.m  XGetWMProtocols.m  XGetWMSizeHints.m  XIconifyWindow.m  XReconfigureWMWindow.m  XSetClassHint.m  XSetCommand.m  XSetIconName.m  XSetIconSizes.m  XSetRGBColormaps.m  XSetTextProperty.m  XSetTransientForHint.m  XSetWMClientMachine.m  XSetWMColormapWindows.m  XSetWMHints.m  XSetWMIconName.m  XSetWMName.m  XSetWMNormalHints.m  (+6 more)
xts5/Xlib16/: .gitignore  Makefile.am  XResourceManagerString.m  XScreenResourceString.m  XrmGetDatabase.m  (+30 more)
(+5061 files in other folders)
